--- a/FinalJantahackHackthonHealthcare.ipynb
+++ b/FinalJantahackHackthonHealthcare.ipynb
@@ -1199,16 +1199,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "i7hkd_dV0_hB",
-        "colab_type": "text"
-      },
-      "source": [
-        "Var_5, Var1 and Var2 have high correlation with each other. Thus in order to prevent Multicolinearity we can drop 2 columns"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "JanJ-wAS1O6E",
@@ -3022,11 +3012,12 @@
         "colab": {}
       },
       "source": [
-        "# from sklearn.preprocessing import QuantileTransformer,RobustScaler\n",
-        "# scaler = RobustScaler()\n",
+        "# from sklearn.preprocessing import StandardScaler\n",
+        "# scaler = StandardScaler()\n",
         "# transform_list=['Education_Score','Age','Total_Followers','Camp_Duration','Registration_year','Registration_month','Registration_day','First_Interaction_year','First_Interaction_month','First_Interaction_day','Camp_Start_Date_year','Camp_Start_Date_month','Camp_Start_Date_day','Camp_End_Date_year','Camp_End_Date_month','Camp_End_Date_day']\n",
         "# train[['Education_Score','Age','Total_Followers','Camp_Duration','Registration_year','Registration_month','Registration_day','First_Interaction_year','First_Interaction_month','First_Interaction_day','Camp_Start_Date_year','Camp_Start_Date_month','Camp_Start_Date_day','Camp_End_Date_year','Camp_End_Date_month','Camp_End_Date_day']] = scaler.fit_transform(train[['Education_Score','Age','Total_Followers','Camp_Duration','Registration_year','Registration_month','Registration_day','First_Interaction_year','First_Interaction_month','First_Interaction_day','Camp_Start_Date_year','Camp_Start_Date_month','Camp_Start_Date_day','Camp_End_Date_year','Camp_End_Date_month','Camp_End_Date_day']])\n",
-        "# test[['Education_Score','Age','Total_Followers','Camp_Duration','Registration_year','Registration_month','Registration_day','First_Interaction_year','First_Interaction_month','First_Interaction_day','Camp_Start_Date_year','Camp_Start_Date_month','Camp_Start_Date_day','Camp_End_Date_year','Camp_End_Date_month','Camp_End_Date_day']] = scaler.transform(test[['Education_Score','Age','Total_Followers','Camp_Duration','Registration_year','Registration_month','Registration_day','First_Interaction_year','First_Interaction_month','First_Interaction_day','Camp_Start_Date_year','Camp_Start_Date_month','Camp_Start_Date_day','Camp_End_Date_year','Camp_End_Date_month','Camp_End_Date_day']])\n"
+        "# test[['Education_Score','Age','Total_Followers','Camp_Duration','Registration_year','Registration_month','Registration_day','First_Interaction_year','First_Interaction_month','First_Interaction_day','Camp_Start_Date_year','Camp_Start_Date_month','Camp_Start_Date_day','Camp_End_Date_year','Camp_End_Date_month','Camp_End_Date_day']] = scaler.transform(test[['Education_Score','Age','Total_Followers','Camp_Duration','Registration_year','Registration_month','Registration_day','First_Interaction_year','First_Interaction_month','First_Interaction_day','Camp_Start_Date_year','Camp_Start_Date_month','Camp_Start_Date_day','Camp_End_Date_year','Camp_End_Date_month','Camp_End_Date_day']])\n",
+        "#PS- Using scaler is giving us a lesser score and hence it is not scaled"
       ],
       "execution_count": null,
       "outputs": []
@@ -4382,64 +4373,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dZPIVcFPjUj-",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "9536dff5-fa5b-4a7d-cbbb-0ac20c779416"
-      },
-      "source": [
-        "#KNN\n",
-        "\n",
-        "X_train, X_test, y_train, y_test= train_test_split(X,y,test_size=0.33,stratify=y, random_state=0)\n",
-        "knn = KNeighborsClassifier(n_neighbors=500)\n",
-        "knn.fit(X_train, y_train)\n",
-        "y_pred=knn.predict(X_test)\n",
-        "score=accuracy_score(y_pred,y_test)\n",
-        "print(\"Test score is \",score)\n",
-        "print('ROC-AUC score is ',roc_auc_score(y_pred,y_test))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "\n",
-              "            <script src=\"/static/components/requirejs/require.js\"></script>\n",
-              "            <script>\n",
-              "              requirejs.config({\n",
-              "                paths: {\n",
-              "                  base: '/static/base',\n",
-              "                  plotly: 'https://cdn.plot.ly/plotly-latest.min.js?noext',\n",
-              "                },\n",
-              "              });\n",
-              "            </script>\n",
-              "            "
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Test score is  0.7924482730859029\n",
-            "ROC-AUC score is  0.7441872872191359\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "V8G1j2bijopc",
         "colab_type": "code",
         "colab": {
@@ -4489,64 +4422,6 @@
           "text": [
             "Test score is  0.7907173335480235\n",
             "ROC-AUC score is  0.736221943501887\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nEHOkJHujsnc",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "1f1fd3cf-a3c4-4316-f558-c6f81c78218a"
-      },
-      "source": [
-        "#LinearDiscriminantAnalysis\n",
-        "X_train, X_test, y_train, y_test= train_test_split(X,y,test_size=0.33,stratify=y, random_state=0)\n",
-        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-        "clfld = LinearDiscriminantAnalysis()\n",
-        "clfld.fit(X_train, y_train)\n",
-        "y_pred=clfld.predict(X_test)\n",
-        "score=accuracy_score(y_pred,y_test)\n",
-        "print(\"Test score is \",score)\n",
-        "print('ROC-AUC score is ',roc_auc_score(y_pred,y_test))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "\n",
-              "            <script src=\"/static/components/requirejs/require.js\"></script>\n",
-              "            <script>\n",
-              "              requirejs.config({\n",
-              "                paths: {\n",
-              "                  base: '/static/base',\n",
-              "                  plotly: 'https://cdn.plot.ly/plotly-latest.min.js?noext',\n",
-              "                },\n",
-              "              });\n",
-              "            </script>\n",
-              "            "
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Test score is  0.7898719909830126\n",
-            "ROC-AUC score is  0.7349716552320683\n"
           ],
           "name": "stdout"
         }
